--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="index.html">About</a>
-                <a href="#four">Contact us</a>
+                <a href="contact.html">Contact me</a>
                 
             </nav>
         </div>
