--- a/index.html
+++ b/index.html
@@ -41,7 +41,17 @@
     </div> 
 
     <div class="second">
-        <h2>Sample text 2</h2>
+        <h2>My skills</h2>
+        
+        <div class="skillGrid">
+            <div class="html"></div>
+            <div class="css"></div>
+            <div class="js"></div>
+            <div class="c"></div>
+            <div class="cpp"></div>
+            <div class="git"></div> 
+        </div>
+
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ducimus ratione rerum nobis sunt sed nemo totam iusto, tempore provident exercitationem optio omnis iure incidunt impedit culpa ut modi beatae.</span>
     </div>
     <div class="third">
