--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
    <div class="first">
         <div class="profileDiv">
 
-            <div class="profilePic">
-            </div>
-
             <div class="nameDiscription">
-                <span class="name">My name</span>
+                <span>Hello, welcome</span>
+                <span class="name">I,m Name</span>
                 <span>studying at farook college</span>
+            </div>
+            
+            <div class="profilePic">
             </div>
 
         </div>
@@ -44,12 +45,12 @@
     <div class="second">
         <h2>My skills</h2>
         <div class="skillGrid">
-            <div class="html"></div>
-            <div class="css"></div>
-            <div class="js"></div>
-            <div class="c"></div>
-            <div class="cpp"></div>
-            <div class="git"></div> 
+            <div class="gridItems">HTML</div>
+            <div class="gridItems">CSS</div>
+            <div class="gridItems">JAVASCRIPT</div>
+            <div class="gridItems">C</div>
+            <div class="gridItems">C++</div>
+            <div class="gridItems">GIT</div> 
         </div>
     </div>
     <div class="third">
